test/netlist/error/any-block.bop
_(a) = b
where
  b = Id(a);
end where;
